--- a/dashboard.html
+++ b/dashboard.html
@@ -380,7 +380,7 @@
       <p>2. Absen</p>
       <p>3. Lihat Absen</p>
       <button onclick="openImageModal('Gambar1.jpg')">Lihat</button>
-    </div>
+    </div><br>
     <div class="dashboard-item">
         <img src="Gambar5.jpg" alt="logo">
         <p>Ketika User ingin mengubah profile maka ada tampilan</p>
