--- a/ubah_absen.html
+++ b/ubah_absen.html
@@ -164,57 +164,67 @@
 </div>
 
 <script>
-  const pelajaranList = [
-    "Matematika",
-    "Pendidikan Agama dan Budi Pekerti",
-    "Pendidikan Pancasila",
-    "Bahasa Indonesia",
-    "Ilmu Pengetahuan Alam dan Sosial",
-    "Pendidikan Jasmani, Olahraga dan Kesehatan (PJOK)",
-    "Seni dan Budaya",
-    "Projek Penguatan Profil Pelajar Pancasila",
-  ];
+  // Data pelajaran
+    const pelajaranList = [
+      "Matematika",
+      "Pendidikan Agama dan Budi Pekerti",
+      "Pendidikan Pancasila",
+      "Bahasa Indonesia",
+      "Ilmu Pengetahuan Alam dan Sosial",
+      "Pendidikan Jasmani, Olahraga dan Kesehatan (PJOK)",
+      "Seni dan Budaya",
+      "Projek Penguatan Profil Pelajar Pancasila",
+      "Bahasa Sunda",
+    ];
 
-  const siswaData = [
-    { nama: "Adellia Oktaviani", nis: "242501001" },
-    { nama: "Ahmad Fitrah Jumuah", nis: "242501002" },
-    { nama: "Ainayya Fathiyyaturamah", nis: "242501003" },
-    { nama: "Alanis Khumaira Alkhalifah", nis: "242501004" },
-    { nama: "Alwi Mustofah", nis: "242501005" },
-    { nama: "Aqmar Nadhif Ramdhan", nis: "242501006" },
-    { nama: "Arbani Ichsan Alfarizi", nis: "242501007" },
-    { nama: "Arfan Raffasya Shakeel", nis: "242501008" },
-    { nama: "Fadhlan Arkhan Faturrahman", nis: "242501009" },
-    { nama: "Faizal Egio Putra", nis: "2425010010" },
-    { nama: "Hafiz alfatih", nis: "2425010011" },
-    { nama: "Haidar Qodri Al Ayyubi", nis: "2425010012" },
-    { nama: "Hanna Safitri Irawah", nis: "2425010013" },
-    { nama: "Irfan Nilah Maulana", nis: "2425010014" },
-    { nama: "Khamila khoerunnisa", nis: "2425010015" },
-    { nama: "Kinanti Mutiara Adiani", nis: "2425010016" },
-    { nama: "M. pikri Apriansyah", nis: "2425010017" },
-    { nama: "Miftahul Janah", nis: "2425010018" },
-    { nama: "Muhamad khalifi Hafiz", nis: "2425010019" },
-    { nama: "Muhamad Rafa Azka Putra", nis: "2425010020" },
-    { nama: "Muhammad Atdino", nis: "2425010021" },
-    { nama: "Muhammad Arya Kurniawan", nis: "2425010022" },
-    { nama: "Muhammad Iqbal Al Fajry", nis: "2425010023" },
-    { nama: "Muhammad Rayhan Rafasya", nis: "2425010024" },
-    { nama: "Muhammad Rizki Ramadhan", nis: "2425010025" },
-    { nama: "Nakeisha Permata Putri", nis: "2425010026" },
-    { nama: "Naila Azkia Putri", nis: "2425010027" },
-    { nama: "Nurlailan Fitriani Syawalia", nis: "2425010028" },
-    { nama: "R. Nabil Ahmad", nis: "2425010029" },
-    { nama: "Rafka Ardiyansyah", nis: "2425010030" },
-    { nama: "Risma Nurmala", nis: "2425010031" },
-    { nama: "Syamsul Muarif", nis: "2425010032" },
-    { nama: "Shella Anjani", nis: "2425010033" },
-    { nama: "Silvi Tri Jayanti", nis: "2425010034" },
-    { nama: "Solihin", nis: "2425010035" },
-    { nama: "Suci Azahra", nis: "2425010036" },
-    { nama: "Syahirul Alimah", nis: "2425010037" },
-    { nama: "Syamil Hizballeh", nis: "2425010038" },
-  ];
+    // Data siswa (40 orang)
+    const siswaData = [
+    { nama: "Adeeva Afshan Myesha", nis: "232401001" },
+    { nama: "Adelia Nazwa Orlin", nis: "232401002" },
+    { nama: "Adellia Rahmadhani", nis: "232401003" },
+    { nama: "Alby Zikri Putra Zaelani", nis: "232401004" },
+    { nama: "Alika Meisa Gabriela", nis: "232401005" },
+    { nama: "Almeera Izhar Mauza", nis: "232401006" },
+    { nama: "Amanda Ramadhani", nis: "232401027" },
+    { nama: "Amira Ainun Mahya", nis: "232401007" },
+    { nama: "Ananda Muhammad Yusuf", nis: "232401008" },
+    { nama: "Ashila Alfahreza", nis: "232401009" },
+    { nama: "Az Zahra Rizkyyani Saputri", nis: "232401010" },
+    { nama: "Azkha Ramadhan Hardiansyah", nis: "232401011" },
+    { nama: "Bilqis Nafisa Azura", nis: "232401012" },
+    { nama: "Dias Nafis Alfaridzy Akhmad", nis: "232401013" },
+    { nama: "Elvina Kirana Maulica", nis: "232401014" },
+    { nama: "Hasbi Rahmdan Solihin", nis: "232401015" },
+    { nama: "Iqbal Gunawan", nis: "232401016" },
+    { nama: "Kanaya Elsabila Putri", nis: "232401017" },
+    { nama: "Kayla Putri Suhendar", nis: "232401018" },
+    { nama: "Keisha Putri Sabhira", nis: "232401019" },
+    { nama: "Kha Iza Nazira Putri", nis: "232401020" },
+    { nama: "Khaniza Nafiza Putri", nis: "232401021" },
+    { nama: "Khansa Alifa Agung", nis: "232401022" },
+    { nama: "Kharisma Putri", nis: "232401023" },
+    { nama: "M Zulfan Azhar", nis: "232401024" },
+    { nama: "M Ryan Ardiansyah", nis: "232401026" },
+    { nama: "Mario Apriansyah Sumarna", nis: "232401028" },
+    { nama: "Muhamad Al Fahrizi", nis: "232401029" },
+    { nama: "Muhamad Alfiano", nis: "232401030" },
+    { nama: "Muhamad Anjas Putra", nis: "232401031" },
+    { nama: "Muhamad Pajar Ramadhan", nis: "232401033" },
+    { nama: "Muhammad Fahri", nis: "232401034" },
+    { nama: "Muhammad Gibran", nis: "232401035" },
+    { nama: "Muhammad Rifaldi", nis: "232401036" },
+    { nama: "Muhammad Rifki Al-Hakim", nis: "232401037" },
+    { nama: "Natasya Adreni Meisy", nis: "232401039" },
+    { nama: "Nisa Hayatul Nahda", nis: "232401040" },
+    { nama: "Nur Aulia", nis: "232401041" },
+    { nama: "Raisyha Az-Zahra", nis: "232401042" },
+    { nama: "Riza Amsory", nis: "232401043" },
+    { nama: "Sapnatun Najwa", nis: "232401044" },
+    { nama: "Sufhian Sarif", nis: "232401045" },
+    { nama: "Tri Guntara", nis: "232401046" },
+    { nama: "Yusria Humaira", nis: "232401047" },
+];
+
 
   document.addEventListener("DOMContentLoaded", function() {
     loadPelajaran();
