--- a/ubah_absen.html
+++ b/ubah_absen.html
@@ -28,6 +28,7 @@
       min-height: 100vh;
       padding: 20px;
       font-size: 18px;
+      line-height: 1.6;
     }
 
     .form-container {
@@ -35,8 +36,9 @@
       padding: 25px;
       border-radius: var(--border-radius);
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      width: 100%;
       max-width: 1000px;
-      margin: auto;
+      margin: 0 auto;
     }
 
     h2 {
@@ -46,13 +48,22 @@
       color: #333;
     }
 
-    input[type="date"], select, button {
+    input[type="date"], 
+    select, 
+    button {
       padding: 15px;
       margin: 12px 0;
       width: 100%;
+      box-sizing: border-box;
       border-radius: var(--border-radius);
       border: 2px solid #ddd;
       font-size: var(--font-large);
+    }
+
+    input[type="date"]:focus,
+    select:focus {
+      border-color: var(--primary-color);
+      outline: none;
     }
 
     table {
@@ -63,25 +74,14 @@
     }
 
     th, td {
-      padding: 10px;
+      padding: 15px 10px;
       text-align: center;
       border: 1px solid #ddd;
     }
 
     th {
-      background: #f2f2f2;
-    }
-
-    .btn-group {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin: 20px 0;
-    }
-
-    .btn-group button {
-      flex: 1;
-      min-width: 150px;
+      background-color: #f2f2f2;
+      font-weight: bold;
     }
 
     button {
@@ -90,11 +90,32 @@
       border: none;
       cursor: pointer;
       font-weight: bold;
+      transition: background 0.3s;
       font-size: var(--font-large);
     }
 
     button:hover {
       background-color: var(--secondary-color);
+    }
+
+    .btn-group {
+      display: flex;
+      gap: 15px;
+      margin: 20px 0;
+      flex-wrap: wrap;
+    }
+
+    .btn-group button {
+      flex: 1;
+      min-width: 150px;
+    }
+
+    .btn-danger {
+      background-color: var(--danger-color);
+    }
+
+    .btn-danger:hover {
+      background-color: #B71C1C;
     }
 
     .btn-secondary {
@@ -105,23 +126,63 @@
       background-color: #616161;
     }
 
-    .btn-danger {
-      background-color: var(--danger-color);
-    }
-
-    .btn-danger:hover {
-      background-color: #b71c1c;
-    }
-
     input[type="radio"] {
-      transform: scale(1.5);
+      transform: scale(1.8);
       margin: 0 10px;
       accent-color: var(--primary-color);
     }
 
+    /* Responsive Styles */
     @media (max-width: 768px) {
+      body {
+        padding: 10px;
+        font-size: 16px;
+      }
+
+      .form-container {
+        padding: 15px;
+      }
+
+      h2 {
+        font-size: var(--font-large);
+        margin-bottom: 15px;
+      }
+
+      table {
+        font-size: 16px;
+      }
+
+      th, td {
+        padding: 12px 5px;
+      }
+
+      input[type="radio"] {
+        transform: scale(1.5);
+        margin: 0 5px;
+      }
+
       .btn-group {
         flex-direction: column;
+        gap: 10px;
+      }
+
+      .btn-group button {
+        width: 100%;
+      }
+    }
+
+    @media (max-width: 480px) {
+      table {
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+      }
+
+      input[type="date"],
+      select,
+      button {
+        padding: 12px;
+        font-size: 16px;
       }
     }
   </style>
